# writer

./: .gitignore  LICENSE.md  README.md  index.html  package.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: App.test.tsx  App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  menu.rs
src/components/: EditorPane.tsx
src/lib/: desktop.ts  document.test.ts  document.ts  markdown.test.ts  markdown.ts  preview.ts  shortcuts.ts
