[package]
name = "writer"
version = "0.1.0"
description = "Cross-platform Markdown writer"
authors = ["Agni"]
edition = "2021"

[lib]
name = "writer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.14"
